--- a/source/pages/app.html
+++ b/source/pages/app.html
@@ -12,5 +12,8 @@
     <p>
         This page will the app (still working on it)
     </p>
+    <canvas id="grid" width="500" height="500">
+    </canvas>
+    <script type="module" src="./../scripts/app.js"></script>
 </body>
 </html>
