Add html structure to web pages

--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -6,11 +6,42 @@
     <title>Game Of Life</title>
 </head>
 <body>
-    <h1>
-        Game of Life Simulator
-    </h1>
-    <p>
-        In this page you will see info about the app. Still in progress
-    </p>
+    <nav>
+        <ul>
+            <li>
+                <a>About the Game Of Life</a>
+            </li>
+            <li>
+                <a>Instructions</a>
+            </li>
+            <li>
+                <a href="./app.html">Play</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <h1>
+            Game of Life Simulator
+        </h1>
+    </header>
+    <main>
+        <section>
+            <h2>What is Game Of Life</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae odit a facere soluta officiis quia illo autem consectetur quod illum consequuntur quam ea voluptatum repellendus modi, eaque magni nesciunt? Quia!
+            </p>
+        </section>
+        <section>
+            <h2>How to play</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio, veritatis perspiciatis nulla vitae nesciunt corporis, laudantium consequatur harum itaque ex ratione. Incidunt quos iure unde laudantium magnam molestiae excepturi!
+            </p>
+        </section>
+    </main>
+    <footer>
+        <address>
+            Adolfo Hristo David Roque Gámez
+        </address>
+    </footer>
 </body>
 </html>
