--- a/source/pages/app.html
+++ b/source/pages/app.html
@@ -6,14 +6,21 @@
     <title>Game Of Life Simulator</title>
 </head>
 <body>
-    <h1>
-        Game of Life Simulator
-    </h1>
-    <p>
-        This page will the app (still working on it)
-    </p>
-    <canvas id="grid" width="500" height="500">
-    </canvas>
+    <header>
+        <h1>
+            Game of Life Simulator
+        </h1>
+    </header>
+    <main>
+        <div>
+            Pasarela
+        </div>
+        <canvas id="grid" width="500" height="500">
+        </canvas>
+        <div>
+            Botones
+        </div>
+    </main>
     <script type="module" src="./../scripts/app.js"></script>
 </body>
 </html>
