--- a/source/pages/app.html
+++ b/source/pages/app.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Of Life Simulator</title>
+    <link rel="stylesheet" href="./../style/app.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,6 +22,9 @@
         </canvas>
         <div>
             Botones
+            <i class="material-icons">
+                play_arrow
+            </i>
         </div>
     </main>
     <script type="module" src="./../scripts/app.js"></script>
