--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../style/index.css">
     <title>Game Of Life</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <ul>
             <li>
                 <a>About the Game Of Life</a>
