Adding navbar style

--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
+        <ul class="navbar-items">
             <li>
-                <a>About the Game Of Life</a>
+                <a class="navbar-link" href="#">About</a>
             </li>
             <li>
-                <a>Instructions</a>
+                <a class="navbar-link" href="#">Instructions</a>
             </li>
             <li>
-                <a href="./app.html">Play</a>
+                <a class="navbar-link" href="./app.html">Play</a>
             </li>
         </ul>
     </nav>
