Added the button style according to the design

--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -16,7 +16,7 @@
                 <a class="navbar-link" href="#">Instructions</a>
             </li>
             <li>
-                <a class="navbar-link" href="./app.html">Play</a>
+                <a class="btn" href="./app.html">Play</a>
             </li>
         </ul>
     </nav>
